# lib-account

./: Cargo.toml  rustfmt.toml  technical.md
.sqlx/: query-1a62312dd8d9ad6e1c1d478e5d293d9c08f8af74f76f850691203371d95998f0.json  query-3c7445851c526b7144c581c65d0cf9f7605ee897a41edd6010c8a1b2dbfc20a4.json  query-3f48a184037d6ac23bb284be5012ccd40cf6a28b47c8bd205b0881536d5805e0.json  query-455aac457a7f3a399634c03b5d545edab25b5004a55112e87d13df5d395efbd2.json  query-55c2624afd64639c69ce7ee1cd6e269c02f56b57e2a887b538ddae064ee73921.json  query-5cc908e638727568686a83f8eeed3d9a764d922405553b30ef453e0eaed6cd01.json  query-6a96ddc254bdf138d1a2986a09c7116b1fe9af4318b9f32a8715f4a2f9a2531a.json  query-73ae846cf95afacd20240a95474ec77128a19afeef6a7cbcbc09b2da718cab84.json  query-7fa6770f6adf6f065e79ef4f8c2fe600e7c3265a6c90eb9f206b54f018f34284.json  query-ad5656881d9ea079c5dab9d5588052ace0d60e5261c68f24d7f4572eb6b40bc7.json  query-bf2ea31b405857b011bde778d8807772a416673be04c528cad7b0b1d8afbceff.json  query-bfc54c2c23a8adcdc527123ec75fafccce1ca66c6bdd7639aca9f66d0033ccb9.json  query-d3e6042c96d135824408f30ac907722c711848c1de1fe30a827f8d12ea641d64.json  query-dcaedc1205d80fa8443445c61b8622fdad53592bdcb9950d43f1603f04fe620b.json  query-e0b3c0209f1536bd4e12a9c8552f1e0d7e1bc835d9786e1c5752fad49587f634.json  query-ec2e9f7c604bf0db9eeb654f25f29ad5791c67793cfaffa4987cc8492e054242.json  query-fe2d0253490770596e343e0cf3f1b32d19bf3ae88d8a1342d91e11f13e610037.json
migration/src/: m20220101_000001_create_table.rs
queries/: account_platform_data_insert.sql
src/: app.rs  jobs.rs  lib.rs  routes.rs
src/app/: discord.rs  extension.rs
src/database/: account.rs  platform.rs  platform_data.rs
src/entities/: account_platform_data.rs  account_platforms.rs  accounts.rs  mod.rs  prelude.rs
src/jobs/: discord.rs  migrate.rs  server.rs
src/routes/: link.rs  platform.rs  profile.rs  responses.rs  search.rs
src/routes/platform/: bungie.rs  discord.rs  twitch.rs
src/sync/: discord.rs
